<resources>
    <string name="app_name" translatable="false">Headset Notifier</string>
    <string name="action_settings">Settings</string>
    <string name="service_description">Checks when wired or bluetooth headphones are connected</string>
    <string name="foreground_service_ticker">Headphones Notifier is on</string>
    <string name="foreground_service_description">Sets notification sounds as defined by the user into the app</string>
    <string name="notification_content">Tap to change settings.</string>
    <string name="notification_title">Headphones Notifier is active</string>
    <string name="empty_state">There are no notifcation filters. \nTap on + to add one.</string>
    <string name="add_filter">Add new filter</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="permission_needed">Permission needed</string>
    <string name="permission_needed_explanation">To work properly, this app need you to allow notification reading.\nGive permission from settings.</string>
    <string name="cancel">Cancel</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="select_application">Select an application:</string>
    <string name="select_sound">Select notification sound:</string>
    <string name="save">Save</string>
    <string name="error">Error</string>
    <string name="incomplete_values">Impossible to save filter.\nSomething between application or audio notification is not selected.</string>
    <string name="ok">Ok</string>
    <string name="warning">Warning</string>
    <string name="filter_will_not_be_saved">If you leave, this filter will be not saved.\nDo you want to leave?</string>
    <string name="leave">Leave</string>
    <string name="delete_message">Do you want to delete this filter?</string>
    <string name="notification_filters_active">Notification Filters Active</string>
    <string name="loading">Loading</string>
    <string name="edit_filter">Edit Filter</string>
    <string name="app_selected">Application selected:</string>
    <string name="delete">Delete</string>
    <string name="cancel_edit_message">If you leave, edits on this filter will be not saved.\nDo you want to leave?</string>
</resources>
